# ing-informatica-unipd

./: .gitignore  README.md
Architettura degli Elaboratori/: Architettura degli Elaboratori.md
Architettura degli Elaboratori/Appunti/: 1. Indice.md  Assembler.md  DMA.md  Dispositivi I᜵O.md  Elementi di Elettronica.md  Gestione della memoria.md  I linguaggi assembly.md  La Memoria.md  La Programmazione.md  Memoria Cache.md  Pipeline.md  Rappresentazione delle informazioni.md  Reti logiche.md  Storia degli Elaboratori.md  Strutture dati.md  Subroutine.md
Basi di Dati/: Basi di Dati.md
Dati e Algoritmi/Esercizi/: MinMax.java
Elementi di Ingegneria del Software/Appunti/: Elementi di Ingegneria del Software.md
Elementi di Ingegneria del Software/Progetto_Settembre/: README.md
Fondamenti di Controlli Automatici/mathlab/: magnet_levitation_ode.m
Fondamenti di Elettronica/: flashcards_teoria.apkg
Fondamenti di Elettronica/SPICE/: first_spice.asc  (+2 more)
Fondamenti di Informatica/: Fondamenti di Informatica.md
IELTS/: Grammar.md  Listening.md  Reading.md  Speaking.md  Writing.md
Laboratorio di Programmazione/Laboratorio/Lab-8/es/: CMakeLists.txt  main.cpp  maze.txt
Laboratorio di Programmazione/Laboratorio/Lab-8/es/include/: Maze.h  Position.h  RandomRobot.h  RightHandRuleRobot.h  Robot.h
Laboratorio di Programmazione/Laboratorio/Lab-8/es/src/: Maze.cpp  Position.cpp  RandomRobot.cpp  RightHandRuleRobot.cpp
Laboratorio di Programmazione/Laboratorio/Prova in itenere/: CMakeLists.txt  daChiedere.txt  main.cpp
Laboratorio di Programmazione/Laboratorio/Prova in itenere/include/: Book.h  BookShelf.h  Date.h
Laboratorio di Programmazione/Laboratorio/Prova in itenere/src/: Book.cpp  BookShelf.cpp  Date.cpp
Laboratorio di Programmazione/Laboratorio/prova-finale/: CMakeLists.txt  README.md  README.txt  computer_log.txt  main.cpp  tester.cpp
Laboratorio di Programmazione/Laboratorio/prova-finale/include/: AIPlayer.h  Board.h  Building.h  CornerTile.h  Dice.h  Game.h  HumanPlayer.h  IaPlayer.h  LateralTile.h  Player.h  Tile.h
Laboratorio di Programmazione/Laboratorio/prova-finale/include/Player/: AIPlayer.h  HumanPlayer.h  Player.h
Laboratorio di Programmazione/Laboratorio/prova-finale/include/Tile/: Tile.h
Laboratorio di Programmazione/Laboratorio/prova-finale/src/: AIPlayer.cpp  Board.cpp  Dice.cpp  Game.cpp  HumanPlayer.cpp  Player.cpp  Tile.cpp
Laboratorio di Programmazione/Laboratorio/prova-finale/src/Player/: AIPlayer.cpp  HumanPlayer.cpp  Player.cpp
Modelli e Software per l'Ottimizzazione Discreta/: Flashcard.goodnotes  flashcards.apkg
Reti di Calcolatori/: base64encoder.c
Segnali e Sistemi/: MATLAB.md
Sistemi Operativi/: Flashcards.apkg
Teoria Dei Circuiti/: Flashcards.goodnotes  flashcards.apkg
Tesi/: Cuzzolin_Matteo.tex  bibliografia.bib  image_converter.sh  presentazione.key
Tirocinio/: tutorial.md
(+526 files in other folders)
