cmake_minimum_required(VERSION 2.8...3.5 FATAL_ERROR)

project(Monopoli VERSION 1.0.0 LANGUAGES CXX)

#add_library(Date include/Date.h src/Date.cpp)
#add_library(Book include/Book.h src/Book.cpp)
#add_library(Bookshelf include/BookShelf.h src/BookShelf.cpp)

#add_executable(Test test.cpp)

#target_link_libraries(Test Date Book Bookshelf)